MTP-5 API обновления и удаления публикации: Обновление публикации
