# swagger.yaml
@@ -68,6 +68,39 @@ paths:
           description: Внутренние ошибки
           content: { }
       x-codegen-request-body-name: body
+    put:
+      tags:
+        - posts
+      summary: Обновление публикации
+      operationId: updatePost
+      requestBody:
+        description: Актуальные сведения о публикации
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Post'
+        required: true
+      parameters:
+        - name: post_id
+          in: path
+          description: Идентификатор публикации
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          description: Обновлённая публикация
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Post'
+        422:
+          description: Невалидные данные
+          content: { }
+        500:
+          description: Внутренние ошибки
+          content: { }
+      x-codegen-request-body-name: body
   /posts/{post_id}/components:
     get:
       tags:
